fix : control text overlapping issue

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -3872,9 +3872,51 @@ span.customize-control-title.ast-group-section-title {
 	cursor: pointer;
 }
 
-.customize-control-ast-radio-icon.ast-top-dotted-divider .ast-options{
-    top: calc(50% + 12px);
-    transform: translateY(-50%);
+.customize-control-ast-multi-selector .input-wrapper {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+}
+.customize-control-ast-multi-selector .ast-multiselector-inner-wrap {
+	display: flex;
+	justify-content: center;
+	flex: 1 1 0;
+	background: var(--ast-customizer-color-9);
+	border: 1px solid var(--ast-customizer-color-7);
+	padding: .6em 0;
+	cursor: pointer;
+	--ast-customizer-multiselect-icon-color: var(--ast-customizer-color-6);
+	margin-right: -1px;
+}
+
+.customize-control-ast-multi-selector .ast-multiselector-inner-wrap.active {
+	--ast-customizer-multiselect-icon-color: var(--ast-customizer-color-1);
+	border-color: var(--ast-customizer-color-3);
+	z-index: 1;
+}
+.customize-control-ast-multi-selector .ast-multiselector-inner-wrap svg {
+	fill: var(--ast-customizer-color-10);
+}
+.ast-multiselector-inner-wrap .ahfb-icon-set {
+	line-height: 1;
+}
+.customize-control-ast-multi-selector .ast-multiselector-inner-wrap:last-child {
+	border-radius: 3px 0px 0px 3px;
+}
+.customize-control-ast-multi-selector .ast-multiselector-inner-wrap:first-child {
+	border-radius: 0px 3px 3px 0px;
+}
+
+.customize-control-ast-radio-icon .ast-control-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.customize-control-ast-radio-icon .customize-control-title {
+    flex: 1;
+    padding-left: 0.5em;
 }
 
 .customize-control-ast-radio-icon .customize-control-title {
@@ -3883,10 +3925,6 @@ span.customize-control-title.ast-group-section-title {
 }
 
 .customize-control-ast-radio-icon .ast-options {
-    position: absolute;
-    top: calc(50%);
-    transform: translateY(-50%);
-    left: 0;
     background-color: var(--ast-customizer-color-9);
     margin: 0;
     line-height: 0;
@@ -3930,40 +3968,6 @@ span.customize-control-title.ast-group-section-title {
     background-color: var(--ast-customizer-color-1);
     color: var(--ast-customizer-color-10);
     border-color: var(--ast-customizer-color-1);
-}
-.customize-control-ast-multi-selector .input-wrapper {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-}
-.customize-control-ast-multi-selector .ast-multiselector-inner-wrap {
-	display: flex;
-	justify-content: center;
-	flex: 1 1 0;
-	background: var(--ast-customizer-color-9);
-	border: 1px solid var(--ast-customizer-color-7);
-	padding: .6em 0;
-	cursor: pointer;
-	--ast-customizer-multiselect-icon-color: var(--ast-customizer-color-6);
-	margin-right: -1px;
-}
-
-.customize-control-ast-multi-selector .ast-multiselector-inner-wrap.active {
-	--ast-customizer-multiselect-icon-color: var(--ast-customizer-color-1);
-	border-color: var(--ast-customizer-color-3);
-	z-index: 1;
-}
-.customize-control-ast-multi-selector .ast-multiselector-inner-wrap svg {
-	fill: var(--ast-customizer-color-10);
-}
-.ast-multiselector-inner-wrap .ahfb-icon-set {
-	line-height: 1;
-}
-.customize-control-ast-multi-selector .ast-multiselector-inner-wrap:last-child {
-	border-radius: 3px 0px 0px 3px;
-}
-.customize-control-ast-multi-selector .ast-multiselector-inner-wrap:first-child {
-	border-radius: 0px 3px 3px 0px;
 }
 
 .customize-control-ast-row-layout .ast-responsive-btns {
@@ -7185,9 +7189,16 @@ span.customize-control-title.ast-group-section-title {
 	border-radius: 0px 3px 3px 0px;
 }
 
-.customize-control-ast-radio-icon.ast-top-dotted-divider .ast-options{
-    top: calc(50% + 12px);
-    transform: translateY(-50%);
+.customize-control-ast-radio-icon .ast-control-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.customize-control-ast-radio-icon .customize-control-title {
+    flex: 1;
+    padding-left: 0.5em;
 }
 
 .customize-control-ast-radio-icon .customize-control-title {
@@ -7196,10 +7207,6 @@ span.customize-control-title.ast-group-section-title {
 }
 
 .customize-control-ast-radio-icon .ast-options {
-    position: absolute;
-    top: calc(50%);
-    transform: translateY(-50%);
-    left: 0;
     background-color: var(--ast-customizer-color-9);
     margin: 0;
     line-height: 0;
