--- a/inc/customizer/custom-controls/assets/css/unminified/radio-icon.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/radio-icon.css
@@ -1,6 +1,13 @@
-.customize-control-ast-radio-icon.ast-top-dotted-divider .ast-options{
-    top: calc(50% + 12px);
-    transform: translateY(-50%);
+.customize-control-ast-radio-icon .ast-control-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.customize-control-ast-radio-icon .customize-control-title {
+    flex: 1;
+    padding-right: 0.5em;
 }
 
 .customize-control-ast-radio-icon .customize-control-title {
@@ -9,10 +16,6 @@
 }
 
 .customize-control-ast-radio-icon .ast-options {
-    position: absolute;
-    top: calc(50%);
-    transform: translateY(-50%);
-    right: 0;
     background-color: var(--ast-customizer-color-9);
     margin: 0;
     line-height: 0;
